# euclider

./: .gdb_history  .gitignore  .travis.yml  1  Cargo.toml  LICENSE-MIT  README.md  appveyor.yml  rustfmt.toml
ci/: before_deploy.ps1  before_deploy.sh  install.sh  script.sh
examples/: room.json
scenes/: 3d_frame.json  3d_fresnel.json  3d_fresnel_2.json  3d_hallways.json  3d_photo.json  3d_room.json  4d.json  4d_cylinders.json  4d_frame.json  4d_fresnel.json  4d_room.json  hallways.json  room.json
src/: main.rs  scene.rs  simulation.rs  universe.rs  util.rs
src/universe/: camera.rs  mod.rs
src/universe/d3/: entity.rs  mod.rs
src/universe/d3/entity/: camera.rs  material.rs  mod.rs  shape.rs  surface.rs
src/universe/d4/: mod.rs
src/universe/d4/entity/: camera.rs  material.rs  mod.rs  shape.rs  surface.rs
src/universe/entity/: camera.rs  material.rs  mod.rs  shape.rs  surface.rs
