[package]
name = "euclider"
version = "0.16.0"
description = "A non-euclidean ray tracer"
license = "MIT/Unlicense"
authors = ["Jakub Hlusička <jakub.hlusicka@email.cz>"]
repository = "https://github.com/Limeth/euclider"
keywords = ["graphics", "rendering", "ray", "tracing"]
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "UNLICENSE",
]

[features]
low_precision = []

[dependencies]
clippy = "0.*"
glium = "0.*"
nalgebra = "0.*"
image = "0.*"
scoped_threadpool = "0.*"
noise = "0.*"
rand = "0.*"
num = "0.*"
palette = "0.*"
json = "0.*"
parse-generics-shim = "0.*"
mopa = { git = "https://github.com/Limeth/mopa.git" }
clap = "2.*"
meval = "0.*"
